# dysco

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .nvimrc  .python-version  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml  tasks.py  tox.ini
.circleci/: config.yml
docs/: add_doctest_imports.py  conf.py  index.rst  readme.rst
dysco/: __init__.py  dysco.py  scope.py
tests/: test_config.py  test_dysco.py  test_scope.py
