[tool.poetry]
name = "dysco"
version = "0.0.5"
description = "Dysco provides configurable dynamic scoping behavior in Python."
authors = ["Evan Sangaline <evan@intoli.com>"]
license = "BSD-2-Clause"
readme = "README.md"
homepage = "https://github.com/intoli/dysco/"
repository = "https://github.com/intoli/dysco/"
keywords = ["dynamic scope"]
classifiers = [
  "Topic :: Software Development :: Libraries"
]
include = [
  "LICENSE.md",
]

[tool.poetry.dependencies]
python = "^3.6"
python-slugify = "^4.0"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allows-prereleases = true}
isort = {version = "^4.3", allows-prereleases = true}
ipython = {version = "^7.9", allows-prereleases = true}
mypy = {version = "^0.740.0", allows-prereleases = true}
pytest = {version = "^5.2", allows-prereleases = true}
flake8 = {version = "^3.7", allows-prereleases = true}
sphinx = {version = "^2.2", allows-prereleases = true}
sphinx-autodoc-typehints = {version = "^1.10", allows-prereleases = true}
pytest-sugar = "^0.9.2"
pytest-cov = "^2.8"
pytest-pudb = "^0.7.0"
pytest-watch = "^4.2"
tox = "^3.14"
pudb = "^2019.1"
m2r = "^0.2.1"
python-docs-theme = "^2018.7"
tox-pyenv = "^1.1"
importlib-metadata = "^0.23.0"
invoke = "^1.3"

[tool.black]
target_version = ['py36', 'py37', 'py38']
skip_string_normalization = true
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.tox
  | \.venv
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
